--- a/FE/package.json
+++ b/FE/package.json
@@ -16,9 +16,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "firebase": "^10.7.0",
+    "force": "^0.0.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-scripts": "^5.0.1",
     "react-datetime-picker": "^5.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
